@@ -1013,6 +1013,9 @@ ReadConfig (
                GlobalConfig.EnableMouse = FALSE;
            }
         }
+        else if (MyStriCmp (TokenList[0], L"ignore_previous_boot")) {
+           GlobalConfig.IgnorePreviousBoot = HandleBoolean (TokenList, TokenCount);
+        }
         else if (MyStriCmp (TokenList[0], L"text_renderer")) {
            GlobalConfig.TextRenderer = HandleBoolean (TokenList, TokenCount);
         }
